welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: ';' expected but 'false' found.
while(estSurBiscuit)==false{
                      ^